(feat) Date format in DE (bug) Carets not in line with months (bug) Change mouse cursor to pointer while using date picker (bug) Hover state of date picker to align with "all campaigns" (bug) "Sign out" button shall be "Log out" because we say "Log in" (bug) Correct copy on login page (bug) Move up spinner icon on "Log in" by 2px

--- a/app/components/Button/styles.scss
+++ b/app/components/Button/styles.scss
@@ -57,6 +57,8 @@
       svg {
         height: 16px;
         width: 16px;
+        margin-top: 6px;
+        vertical-align: top;
       }
     }
     &.is-spinning {
